<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/button_save"
            android:textColor="@color/buttonLabel" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:text="@string/button_delete"
            android:textColor="@color/buttonLabel" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <EditText
            android:id="@+id/edit_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_word"
            android:inputType="textMultiLine"
            android:padding="@dimen/small_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_marginTop="@dimen/big_padding"
            android:textSize="18sp" />
    </LinearLayout>



</LinearLayout>