<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StockQuote.ShowStockActivity"
    android:padding="5dp"
    android:textSize="15sp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingLeft="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/error"
            android:textColor="@android:color/holo_red_dark"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/ticker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/purple_text_header"
            android:layout_gravity="center"/>
        <!-- actual data -->
        <TextView
            android:id="@+id/companyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />


        <TextView
            android:id="@+id/currentPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/stockExchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/buylayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/purple_text_header"
                android:layout_marginTop="7dp"
                android:text="@string/buy_displayed_stock"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity" />

                <EditText
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_quantity"
                    android:inputType="number"/>
        </LinearLayout>

            <TextView
                android:id="@+id/currentBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/maxAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buy"
                    android:onClick="buyStock"
                    android:layout_gravity="center"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/show"
            android:layout_gravity="bottom|end"/>
    </LinearLayout>
</ScrollView>

